fix da check
